; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_error.c_test.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_error.c_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@t = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @t, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = call i32 (...) @gettok()
  store i32 %9, i32* @t, align 4
  br label %22

10:                                               ; preds = %2
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @expect(i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @skipto(i32 %13, i8* %14)
  %16 = load i32, i32* @t, align 4
  %17 = load i32, i32* %3, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %10
  %20 = call i32 (...) @gettok()
  store i32 %20, i32* @t, align 4
  br label %21

21:                                               ; preds = %19, %10
  br label %22

22:                                               ; preds = %21, %8
  ret void
}

declare dso_local i32 @gettok(...) #1

declare dso_local i32 @expect(i32) #1

declare dso_local i32 @skipto(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
